# rsomics-fasta-utils

./: Cargo.toml  README.md
benches/: bench.rs
src/: alphabet.rs  cli.rs  lib.rs  main.rs
src/ops/: chroms.rs  composition.rs  count.rs  dedup.rs  extract.rs  filter.rs  gc_content.rs  grep.rs  head.rs  kmers.rs  len.rs  mod.rs  rename.rs  revcomp.rs  sample.rs  shuffle.rs  sort.rs  split.rs  tab.rs  to_bed.rs  to_fastq.rs  unique.rs  upper.rs  window.rs  wrap.rs
tests/: compat.rs  smoke.rs
tests/golden/: rna.fa  rna.seqkit.revcomp.fa  small.seqkit.head2.fa  small.seqkit.revcomp.fa  small.seqkit.stats.tsv
