[package]
name = "rsomics-fasta-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FASTA utility toolkit — count, chroms, len, revcomp, rename, tab, wrap, unique, convert, and more"

[[bin]]
name = "rsomics-fasta-utils"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
clap = { workspace = true, features = ["derive"] }
needletail = "0.6"
regex = "1"
rand = "0.8"

[lints]
workspace = true
