[package]
name = "rsomics-fasta-utils"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "FASTA utility toolkit — count, chroms, len, revcomp, rename, tab, wrap, unique, convert, and more"

[[bin]]
name = "rsomics-fasta-utils"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
regex = "1"
rand = "0.8"

