[package]
name = "rsomics-fasta-utils"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "FASTA utility toolkit — count, chroms, len, revcomp, rename, tab, wrap, unique, convert, and more"

[[bin]]
name = "rsomics-fasta-utils"
path = "src/main.rs"


[lib]
name = "rsomics_fasta_utils"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
regex = "1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
